# redash_kernel

./: .gitignore  .pre-commit-config.yaml  .tool-versions  LICENSE  README.md  pyproject.toml
redash_kernel/: __init__.py  __main__.py  kernel.py
redash_kernel/kernelspec/: kernel.json
scripts/: setup_dev.sh
