[project]
name = "redash-kernel"
version = "0.1.0"
description = "A redash Jupyter kernel"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter-client>=8.6.0",
    "ipykernel>=6.29.5",
    "redash-python>=0.3.27",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9.2",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pre-commit>=4.0.1",
    "build>=1.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["redash_kernel"]

[tool.ruff]
line-length = 88
target-version = "py311"
